--- a/react-router-demo02/src/index.css
+++ b/react-router-demo02/src/index.css
@@ -51,3 +51,9 @@ li{
     padding: 20px 10px;
     background-color: rgb(205, 224, 245);
 }
+.container a:hover{
+    color: #1DA57A;
+}
+.active-nav{
+    color: #1DA57A;
+}
