--- a/react-router-demo02/src/style/antd-style.module.scss
+++ b/react-router-demo02/src/style/antd-style.module.scss
@@ -1,9 +1,47 @@
-.ant-input{
-  max-width: 60vw;
-  margin-right: .6rem;
+.ant-input {
+    max-width: 60vw;
+    margin-right: .6rem;
 }
 
+.ant-main-layout {
+    min-height: 100vh;
+    // margin-left: 200px;
+}
 
+.ant-sider {
+    // height: 100vh;
+    // position: fixed;
+    // left: 0;
+}
 
+.ant-layout-header {
+    background: #fff;
+    padding: 0;
+    // position: fixed;
+    // width: 100%;
+    // box-shadow: 0 1px 4px rgba(0,21,41,0.08);
+}
 
+.ant-layout-content {
+    margin: 24px 16px 24px;
+    padding: 24px;
+    background: #fff;
+}
 
+.ant-layout .trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.ant-layout .trigger:hover {
+    color: #1890ff;
+}
+
+.ant-layout .logo {
+    height: 32px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px;
+}
