--- a/react-router-demo02/src/style/antd-style.module.scss
+++ b/react-router-demo02/src/style/antd-style.module.scss
@@ -8,11 +8,11 @@
     // margin-left: 200px;
 }
 
-.ant-sider {
-    // height: 100vh;
-    // position: fixed;
-    // left: 0;
-}
+// .ant-sider {
+//     height: 100vh;
+//     position: fixed;
+//     left: 0;
+// }
 
 .ant-layout-header {
     background: #fff;
@@ -24,28 +24,44 @@
 }
 
 .ant-layout-content {
-    margin: 24px 16px 24px;
-    padding: 24px;
-    background: #fff;
+    display: flex;
+    flex-direction: column;
+    
+    .ant-layout-content-main{
+        flex: auto;
+        margin: 16px 20px 24px;
+        padding: 24px;
+        background: #fff;
+        a:hover {
+            color: #1DA57A
+        }
+        h1{
+            font-size: 24px;
+        }
+    }
+    
 }
 
-.ant-layout .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color 0.3s;
-}
+.ant-layout{
+    .trigger {
+        font-size: 18px;
+        line-height: 64px;
+        padding: 0 24px;
+        cursor: pointer;
+        transition: color 0.3s;
+        &:hover{
 
-.ant-layout .trigger:hover {
-    color: #1890ff;
-}
+            color: #1890ff;
+        }
+    }
+    .logo {
+        height: 36px;
+        margin: 16px;
+        text-align: center;
+        img {
+            height: 100%;
+        }
+    }
+} 
 
-.ant-layout .logo {
-    height: 36px;
-    margin: 16px;
-    text-align: center
-}
-.ant-layout .logo img{
-    height: 100%;
-}
+
